--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
